--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.6.7
-  firebase_ui_auth: ^1.16.1
+  google_sign_in: ^6.3.0
   
   # UI & Theming
   flex_color_scheme: ^8.2.0
@@ -39,11 +39,6 @@ dependencies:
   currency_picker: ^2.0.21
   uuid: ^4.5.1
   shared_preferences: ^2.5.3
-  
-  # Forms
-  flutter_form_builder: ^10.0.1
-  form_builder_validators: ^11.1.2
-
   
 dev_dependencies:
   # Code Generation
