reafactor: use SRP on app db via extracting DAOs, update tests

--- a/build.yaml
+++ b/build.yaml
@@ -8,14 +8,14 @@ targets:
         options:
           # Generate providers with proper naming
           provider_name_prefix: ""
-          
+
       # Freezed for immutable data classes
       freezed:
         generate_for:
           - lib/**/*.dart
         options:
           # Generate copyWith, toString, ==, hashCode
-          
+
       # JSON serialization
       json_serializable:
         generate_for:
@@ -23,10 +23,16 @@ targets:
         options:
           explicit_to_json: true
           field_rename: snake
-          
+
       # Drift database code generation
       drift_dev:
         generate_for:
           - lib/**/*.dart
         options:
           store_date_time_values_as_text: true
+
+      # Mockito for test mocks
+      mockito:
+        generate_for:
+          - test/**/*_test.dart
+        enabled: true
