--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   currency_picker: ^2.0.21
   uuid: ^4.5.1
   shared_preferences: ^2.5.3
+  meta: ^1.15.0
   
 dev_dependencies:
   # Code Generation
