--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.5.1
   shared_preferences: ^2.5.3
   meta: ^1.15.0
+  collection: ^1.19.1
   
 dev_dependencies:
   # Code Generation
