--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: fairshare_app
 description: "Offline-first group expense sharing app"
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.7.0 <4.0.0'
-  flutter: ">=3.29.0"
+  sdk: ">=3.9.2 <4.0.0" # Aligned with the latest stable Flutter 3.35.7
+  flutter: ">=3.35.0"
 
 dependencies:
   flutter:
@@ -17,19 +17,19 @@ dependencies:
   json_annotation: ^4.9.0
   drift: ^2.26.0
   sqlite3_flutter_libs: ^0.5.33
-  
+
   # Navigation & Routing
   go_router: ^15.1.1
-  
+
   # Firebase
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
-  
+
   # UI & Theming
   flex_color_scheme: ^8.2.0
-  
+
   # Utilities
   path_provider: ^2.1.5
   path: ^1.9.1
@@ -41,7 +41,7 @@ dependencies:
   shared_preferences: ^2.5.3
   meta: ^1.15.0
   collection: ^1.19.1
-  
+
 dev_dependencies:
   # Code Generation
   build_runner: ^2.4.15
