feat: implement AI-powered expense categorization using Google Gemini
- Added Google Gemini integration for expense category suggestions.
- Created necessary repository, use case, and category constants.
- Updated UI to include category selection with AI suggestions.
- Enhanced documentation and added relevant screenshots.
- Implemented tests for the new category suggestion functionality.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   meta: ^1.15.0
   collection: ^1.19.1
 
+  # AI & ML
+  flutter_gemini: ^3.0.0
+
 dev_dependencies:
   # Code Generation
   build_runner: ^2.4.15
